--- a/README.org
+++ b/README.org
@@ -22,6 +22,12 @@ Clojure/ClojureScript workshop @ HS Mainz (June 2016)
 - https://groups.google.com/forum/#!forum/clojurescript
 - https://clojurians.slack.com (http://clojurians.net)
 
+** Books
+
+- [[http://braveclojure.com][Brave Clojure]]
+
+TBD
+
 ** License
 
 Copyright © 2016 Karsten Schmidt
